--- a/Contenido/PR.css
+++ b/Contenido/PR.css
@@ -91,8 +91,7 @@ ul li {
 .proyectos-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 20px;
-}
+    gap: 20px; }
 
 .proyecto {
     background: #ecf0f1;
